Modify list API to return version info
